syntax = "proto3";

package message;

// 订单请求参数
message OrderReq{
    string orderId = 1;
    int64 timeStamp = 2;
}

// 订单信息
message OrderInfo{
    string orderId = 1;
    string orderName = 2;
    string orderStatus = 3;
}

// order服务service定义
service OrderService{
    rpc GetOrderInfo(OrderReq)returns(OrderInfo);
}